[tool.poetry]
name = "gnn-hgt"
version = "0.1.0"
description = "research work on graph transformers"
authors = ["Tanzeel shaikh"]
package-mode = false
readme = "README.md"
[project]
name = "gnn-hgt"
version = "0.1.0"
description = "research work on graph transformers"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ipykernel>=6.29.0",
    "datasets>=4.4.2,<5.0.0",
    "torch>=2.5.0,<3.0.0",
    "torch-geometric>=2.7.0,<3.0.0",
    "torch-scatter>=2.1.2,<3.0.0",
    "einops (>=0.8.1,<0.9.0)",
    "huggingface-hub (<1.0.0)",
    "hf-transfer (>=0.1.9,<0.2.0)",
    "transformers (>=4.56.0,<5.0.0)",
    "python-igraph (>=1.0.0,<2.0.0)",
    "openai (>=2.14.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
