[tool.poetry]
name = "gnn-hgt"
version = "0.1.0"
description = "research work on graph transformers"
authors = ["Tanzeel shaikh"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
ipykernel = ">=6.29.0"
datasets = ">=4.4.2,<5.0.0"
torch = "2.5.1"
torch-geometric = ">=2.7.0,<3.0.0"
torch-scatter = "2.1.2"
torch-sparse = "0.6.18"
einops = ">=0.8.1,<0.9.0"
huggingface-hub = "<1.0.0"
hf-transfer = ">=0.1.9,<0.2.0"
transformers = "4.43.3"
python-igraph = ">=1.0.0,<2.0.0"
openai = ">=2.14.0,<3.0.0"
tqdm = ">=4.67.1"
sentence-transformers = "^5.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
